--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -1,7 +1,8 @@
 ---
 import { Image } from "astro:assets";
+import { m } from "../../paraglide/messages.js";
 
-const titles = ["Explore", "Analyse"];
+const titles = ["KOL", m["main.explore"](), m["main.analyse"]()];
 const data = {
   textColor: "text-[#EE7380]",
   description: "Data-driven success",
@@ -48,8 +49,8 @@ const data = {
       transform: translateY(-25%);
     }
     20% {
-      opacity: 1;
-      transform: translateY(0);
+      opacity: 0;
+      transform: translateY(-15%);
     }
     50% {
       opacity: 1;
@@ -61,7 +62,7 @@ const data = {
     }
     100% {
       opacity: 0;
-      transform: translateY(25%);
+      transform: translateY(15%);
     }
   }
 </style>
@@ -72,31 +73,32 @@ const data = {
   <p
     class="text-[#0d0c22] text-lg absolute top-0 font-medium tracking-tight lg:text-2xl"
   >
-    AI influencer analytics platform
+    {m["main.aiPlatform"]()}
   </p>
   <div
-    class={`${data.textColor} text-5xl flex mb-8 lg:gap-10  w-screen lg:ml-0 ml-6 sm:ml-10 flex-row items-center justify-center font-extrabold tracking-[2.6px] lg:text-[130px]`}
+    class={`${data.textColor} text-5xl flex mb-8 gap-6 w-screen ml-10 lg:ml-52 flex-row items-center justify-center font-extrabold tracking-[2.6px] lg:text-[130px]`}
   >
     <Image src="/ion.svg" alt="key" width={240} height={101} />
 
-    <div class="animated-box lg:w-[500px] md:w-[250px] sm:w-[220px] w-[210px]">
-      <span class="animated-slides">{titles[0]}</span>
+    <div class="animated-box">
+      <span class="animated-slides min-w-[500px] text-left">{titles[0]}</span>
     </div>
   </div>
   <p class="font-normal tracking-wide mb-14 text-[42px]">
-    {data.description}
+    {m["main.dataDriverSuccess"]()}
   </p>
   <a href="https://app.ionkol.com/en/sign-up">
     <button
       class="h-10 px-10 py-2 bg-[#EE7380] rounded-3xl text-white text-base font-medium leading-normal tracking-wide hover:bg-[#1a1a2e] active:bg-[#33334d] transition-colors duration-300"
     >
-      {data.buttonLabel}
+      {m["main.startNow"]()}
     </button>
   </a>
 </div>
 
 <script>
-  const titles = ["Explore", "Analyse"];
+  import { m } from "../../paraglide/messages";
+  const titles = ["KOL", m["main.explore"](), m["main.analyse"]()];
   let index = 0;
   setInterval(() => {
     index = (index + 1) % titles.length;
