--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -195,7 +195,7 @@ const stats = [
   );
 </script>
 
-<Layout title={"iON"}>
+<Layout title={"IONKOL | Data-driven Success"}>
   <Navbar />
   <main class="relative">
     <!-- Slider section -->
@@ -349,16 +349,6 @@ const stats = [
             />
           </span>
           <span class="pl-[8px]">{m["index.power.description1"]()}</span>
-          <span class="relative inline-block w-[48px] h-[24px]">
-            <Image
-              class="absolute top-1.5 left-1"
-              src="/ion.svg"
-              alt="key"
-              width={47}
-              height={24}
-            />
-          </span>
-          <span class="pl-[8px]">{m["index.power.description2"]()}</span>
         </p>
 
         <!-- Stats -->
