--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -348,7 +348,7 @@ const stats = [
               height={24}
             />
           </span>
-          <span class="pl-[8px]">{m["index.power.description1"]()}</span>
+          <span class="pl-[8px] text-left">{m["index.power.description1"]()}</span>
         </p>
 
         <!-- Stats -->
