--- a/src/pages/[lang]/resources/index.astro
+++ b/src/pages/[lang]/resources/index.astro
@@ -1,18 +1,19 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import Navbar from "../../components/Navbar.astro";
-import Footer from "../../components/Footer.astro";
-import Button from "../../components/ui/Button.astro";
-import FeaturesTabs from "../../components/react/FeaturesTabs";
+import Layout from "../../../layouts/Layout.astro";
+import Navbar from "../../../components/Navbar.astro";
+import Footer from "../../../components/Footer.astro";
+import Button from "../../../components/ui/Button.astro";
+import FeaturesTabs from "../../../components/react/FeaturesTabs";
 import { Image } from "astro:assets";
-import "../_index.css";
-import Subscribe from "../../components/Subscribe.astro";
-import Switcher from "../../components/Switcher.astro";
-import PriceCardsData from "../../components/react/PriceCards";
-import EvaluatePriceTabs from "../../components/react/EvaluatePriceTabs";
-import ResourcesTabs from "../../components/react/resources/ResourcesTabs";
-import FAQ from "../../components/react/FAQ";
-import { m } from "../../paraglide/messages.js";
+import "../../_index.css";
+import Subscribe from "../../../components/Subscribe.astro";
+import Switcher from "../../../components/Switcher.astro";
+import PriceCardsData from "../../../components/react/PriceCards";
+import EvaluatePriceTabs from "../../../components/react/EvaluatePriceTabs";
+import ResourcesTabs from "../../../components/react/resources/ResourcesTabs";
+import FAQ from "../../../components/react/FAQ";
+import { m } from "../../../paraglide/messages.js";
+import FeaturedPost from "../../../components/react/resources/FeaturedPost";
 ---
 
 <script is:inline>
@@ -76,24 +77,7 @@ import { m } from "../../paraglide/messages.js";
   <main class="relative">
     <section class="mt-40 pb-32 px-4 lg:px-12">
       <div class="flex items-center justify-center w-full">
-        <div class="flex flex-col lg:flex-row gap-16 items-center">
-          <div class="flex flex-col gap-6">
-            <span class="text-[26px] font-semibold"
-              >{m["resources.featured"]()}</span
-            >
-            <span class="text-[42px] font-semibold">
-              {m["resources.featuredPost.title"]()}
-            </span>
-            <span class="text-[34px]">
-              {m["resources.featuredPost.subtitle"]()}
-            </span>
-            <span class="mt-4 text-xl text-[#EE7380]"
-              >{m["resources.featuredPost.readMore"]()}</span
-            >
-          </div>
-
-          <div class="w-[650px] h-[450px] bg-[#D9D9D9]"></div>
-        </div>
+        <FeaturedPost client:load />
       </div>
     </section>
     <section class="pb-32 px-4 lg:px-12">
