fix: minor spelling mistakes

--- a/src/pages/[lang]/explore.astro
+++ b/src/pages/[lang]/explore.astro
@@ -111,7 +111,7 @@ const analyzeTabsData = [
       Discover, connect, and elevate your brand with our unparalleled database. Discover
       creators who inspire and engage. Apply over <span
         class="font-semibold text-black">(x)</span
-      > customizable filters to find the perfect fit for your brand in seconds.
+      > customisable filters to find the perfect fit for your brand in seconds.
     </p>
   </div>
 
