style: update page to latest changes

--- a/src/components/slider/Swiper.astro
+++ b/src/components/slider/Swiper.astro
@@ -30,7 +30,7 @@ const slides = [
 ];
 ---
 
-<div class="flex justify-center items-center min-h-screen">
+<div class="flex justify-center items-center mt-40">
   <Slide title={slides[0].title} textColor={slides[0].textColor} description={slides[0].description} buttonLabel={slides[0].buttonLabel}>
     <Circle backgroundColor={slides[0].circleBackgroundColor} topPosition={slides[0].circleTopPosition}>
         <Fragment set:html={slides[0].circleContent} />
