--- a/src/pages/[lang]/aboutUs.astro
+++ b/src/pages/[lang]/aboutUs.astro
@@ -96,23 +96,14 @@ import { m } from "../../paraglide/messages.js";
         <span>{m["aboutUs.title"]}</span>
       </div>
 
-      <div class="mt-10 relative flex flex-row justify-center text-xl">
-        <span class="pr-2">{m["aboutUs.subtitle"]}</span>
-      </div>
-
       <div class="flex relative items-center justify-center gap-4 mt-8">
         <div class="border-t w-24 border-[#EE7380]"></div>
-        <span class="text-[26px] font-semibold text-center"
+        <span class="text-[26px] w-2/3 font-semibold text-center"
           >{m["aboutUs.tagline"]}</span
         >
         <div class="w-24 border-t border-[#EE7380]"></div>
       </div>
 
-      <div class="mt-8 flex justify-center relative">
-        <div class="w-1/2 text-center text-xl">
-          {m["aboutUs.description"]}
-        </div>
-      </div>
     </section>
 
     <section class="py-[100px] md:py-[300px] px-4 lg:px-12 relative">
