--- a/src/pages/[lang]/features.astro
+++ b/src/pages/[lang]/features.astro
@@ -152,9 +152,9 @@ const analyseTabs = [
       </div>
 
       <div
-        class="flex flex-col lg:flex-row items-center justify-center w-full gap-20 mt-20"
+        class="flex flex-col lg:flex-row lg:items-start items-center justify-center w-full gap-20 mt-20"
       >
-        <div class="flex flex-col gap-6 max-w-2xl">
+        <div class="flex flex-col gap-6 max-w-2xl lg:pt-4">
           <div class="flex flex-row gap-2">
             <Image src="/ion.svg" alt="features" width={99} height={50} />
             <span class="font-semibold text-5xl"
@@ -162,9 +162,6 @@ const analyseTabs = [
             >
           </div>
 
-          <p class="text-xl">
-            {m["features.explore.description1"]()}
-          </p>
           <p class="text-xl">
             {m["features.explore.description2"]()}
           </p>
@@ -186,9 +183,9 @@ const analyseTabs = [
       </div>
 
       <div
-        class="flex flex-col lg:flex-row items-center justify-center w-full gap-20 mt-20"
+        class="flex flex-col lg:flex-row lg:items-start items-center justify-center w-full gap-20 mt-20"
       >
-        <div class="flex flex-col gap-6 max-w-2xl">
+        <div class="flex flex-col gap-6 max-w-2xl lg:pt-4">
           <div class="flex flex-row gap-2">
             <Image src="/ion.svg" alt="features" width={99} height={50} />
             <span class="font-semibold text-5xl"
