--- a/src/pages/[lang]/pricing.astro
+++ b/src/pages/[lang]/pricing.astro
@@ -73,9 +73,9 @@ import { m } from "../../paraglide/messages.js";
   <Navbar />
   <main class="relative">
     <section class="mt-40 pb-32 px-4 lg:px-12">
-      <div class="flex flex-col items-center text-center gap-8">
+      <div class="flex flex-col items-center text-center gap-8 py-14">
         <div
-          class="flex text-[62px] flex-wrap font-semibold flex-row justify-center gap-6"
+          class="flex text-[62px] text-[#EE7380] flex-wrap font-semibold flex-row justify-center gap-6"
         >
           <span>{m["pricing.title.part1"]()}</span>
         </div>
