--- a/src/pages/[lang]/pricing.astro
+++ b/src/pages/[lang]/pricing.astro
@@ -99,7 +99,6 @@ import { m } from "../../paraglide/messages.js";
         <div class="flex flex-col items-center space-y-14">
           <Switcher />
 
-          <!-- Pricing cards -->
           <div
             class="animate-appear grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4 gap-8 w-full"
           >
@@ -120,7 +119,7 @@ import { m } from "../../paraglide/messages.js";
       </div>
       <div class="flex flex-col items-center text-center gap-8">
         <div
-          class="flex text-[62px] relative flex-wrap font-semibold flex-row justify-center gap-6"
+          class="flex text-[62px] text-[#EE7380] relative flex-wrap font-semibold flex-row justify-center gap-6"
         >
           <span>{m["pricing.evaluate.title.part1"]()}</span>
         </div>
