--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -366,7 +366,7 @@ const stats = [
 
     <section class="py-20 px-4 lg:px-12 animate-appear">
       <div class="flex flex-col items-center space-y-14">
-        <h2 class="text-center text-5xl font-extrabold">
+        <h2 class="text-center text-[62px] font-extrabold">
           <span class="text-[#EE7380]">{m["index.pricing.title"]()}</span>
         </h2>
 
