fix (attempt): fonts loading issue

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,6 +34,9 @@ const { title } = Astro.props;
     <meta property="og:locale" content="en_US" />
 
     <!-- Fonts -->
+    <link rel="preload" href="/fonts/GillSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/GillSans.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/GillSans-Medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
