feat: pages responsiveness

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import { m } from "../paraglide/messages.js";
   role="contentinfo"
 >
   <div
-    class="flex flex-col items-center lg:items-start gap-2 mb-8 sm:mb-10 sm:text-center"
+    class="flex flex-col items-center lg:items-start gap-2 my-4 md:my-0 md:mb-8 sm:text-center"
   >
     <Image src="/ionkolLogoNew.svg" alt="key" width={125} height={40} />
     <p class="text-lg text-left">{m["footer.tagline"]()}</p>
@@ -23,7 +23,7 @@ import { m } from "../paraglide/messages.js";
       </ul>
     </div>
 
-    <div class="mt-5">
+    <div class="hidden md:block mt-5">
       <Image src="/instagramLogo.png" alt="key" width={24} height={24} />
     </div>
   </div>
@@ -100,7 +100,7 @@ import { m } from "../paraglide/messages.js";
       </ul>
     </div>
 
-    <div>
+    <div class="">
       <h3
         class="text-[#0d0c22] text-lg font-semibold leading-normal tracking-tight mb-2 text-center sm:text-left"
       >
