--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -67,7 +67,7 @@ const data = {
 </style>
 
 <div
-  class="flex flex-col relative items-center mt-10 justify-center z-10 text-center px-4"
+  class="flex flex-col relative items-center mt-10 justify-center z-10 text-center"
 >
   <p
     class="text-[#0d0c22] text-lg font-medium mb-20 lg:mb-0 tracking-tight lg:text-2xl"
@@ -75,12 +75,12 @@ const data = {
     {m["main.aiPlatform"]()}
   </p>
   <div
-    class={`${data.textColor} text-[100px] flex flex-col mb-4 gap-6 w-screen lg:ml-64 lg:flex-row items-center justify-center font-extrabold tracking-[2.6px] lg:text-[130px]`}
+    class={`${data.textColor} text-[75px] flex flex-col mb-4 gap-6 w-screen lg:ml-64 lg:flex-row items-center justify-center font-extrabold tracking-[2.6px] lg:text-[130px]`}
   >
     <Image src="/ion.svg" alt="key" width={240} height={50} />
 
     <div class="animated-box h-[200px] lg:h-[250px]">
-      <span class="animated-slides min-w-[500px] text-center lg:text-left">{titles[0]}</span>
+      <span class="animated-slides w-[300px] lg:min-w-[500px] text-center lg:text-left">{titles[0]}</span>
     </div>
   </div>
   <p class="font-normal tracking-wide mb-8 text-[42px]">
