fix: footer issue

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -61,7 +61,7 @@ import { m } from "../paraglide/messages.js";
         </ul>
       </div>
 
-      <div class="flex flex-row gap-4 absolute w-64 top-28 md:top-52 left-0">
+      <div class="flex flex-row gap-4 absolute w-64 top-[5.5rem] md:top-52 left-0">
         <a href="#" class="text-lg leading-normal tracking-tight" data-link="#">
           {m["footer.legal.privacyPolicy"]()}
         </a>
