fix: font issues

--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -75,7 +75,7 @@ const data = {
     {m["main.aiPlatform"]()}
   </p>
   <div
-    class={`${data.textColor} text-[75px] flex flex-col mb-4 gap-6 w-screen lg:ml-64 lg:flex-row items-center justify-center font-extrabold tracking-[2.6px] lg:text-[130px]`}
+    class={`${data.textColor} text-[75px] flex flex-col mb-4 gap-6 w-screen lg:ml-64 lg:flex-row items-center justify-center font-semibold tracking-[2.6px] lg:text-[130px]`}
   >
     <Image src="/ion.svg" alt="key" width={240} height={50} />
 
