--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -208,7 +208,7 @@ const stats = [
     <!-- Featured Solutions section -->
     <section class="pb-24 pt-28 px-4 lg:px-12 animate-appear">
       <h1
-        class="text-center text-[#EE7380] text-[62px] font-extrabold tracking-wide mb-16"
+        class="text-center text-[#EE7380] text-[62px] font-bold tracking-wide mb-16"
       >
         {m["index.keyFeatures"]()}
       </h1>
@@ -366,7 +366,7 @@ const stats = [
 
     <section class="py-20 px-4 lg:px-12 animate-appear">
       <div class="flex flex-col items-center space-y-14">
-        <h2 class="text-center text-[62px] font-extrabold">
+        <h2 class="text-center text-[62px] font-bold">
           <span class="text-[#EE7380]">{m["index.pricing.title"]()}</span>
         </h2>
 
