--- a/src/pages/[lang]/pricing.astro
+++ b/src/pages/[lang]/pricing.astro
@@ -91,7 +91,7 @@ import { m } from "../../paraglide/messages.js";
 
     <section class="py-20 px-4 lg:px-12">
       <div class="flex flex-col items-center space-y-14">
-        <h2 class="text-center text-5xl font-extrabold">
+        <h2 class="text-center text-5xl font-bold">
           <span class="text-[#EE7380]">{m["pricing.subscription.title"]()}</span
           >
         </h2>
