feat: language switcher on mobile version

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -89,6 +89,9 @@ const SIGN_UP_URL = "https://app.ionkol.com/sign-up";
           </a>
         ))
       }
+      <span class="w-full flex items-center justify-center">
+       <LanguageSwitcher client:load />
+       </span>
     </ul>
   </nav>
 
