--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -62,11 +62,11 @@ import { m } from "../paraglide/messages.js";
       </div>
 
       <div class="flex flex-row gap-4 absolute w-64 top-[5.5rem] md:top-52 left-0">
-        <a href="#" class="text-lg leading-normal tracking-tight" data-link="#">
+        <a href="/terms" class="text-lg leading-normal tracking-tight" data-link="/terms">
           {m["footer.legal.privacyPolicy"]()}
         </a>
         <span>|</span>
-        <a href="#" class="text-lg leading-normal tracking-tight" data-link="#">
+        <a href="/terms" class="text-lg leading-normal tracking-tight" data-link="/terms">
           {m["footer.legal.termsOfService"]()}
         </a>
       </div>
