--- a/src/components/slider/Swiper.astro
+++ b/src/components/slider/Swiper.astro
@@ -1,6 +1,7 @@
 ---
 import Slide from "./Slide.astro";
 import Circle from "./Circle.astro";
+import ImageAnimation from "./ImageAnimation.astro";
 
 const slides = [
   {
@@ -9,31 +10,20 @@ const slides = [
     description: 'Data-driven success',
     buttonLabel: 'Start Now',
     circleBackgroundColor: 'bg-[#feeff1]',
-    circleTopPosition: '-top-[18%] lg:-top-[16%] left-[65%]',
     circleContent: `
-        <div class=" scale-75 lg:scale-100 h-[90px] rotate-[7.77deg] px-6 py-3 bg-white rounded-xl shadow flex flex-col justify-center items-center">
-          <div class="flex gap-3 mb-2">
-            <div class="p-2 bg-[#fea598] rounded-full">
-              <img src="/instagram-icon.svg" alt="Instagram" width="16" height="16" />
-            </div>
-            <div class="p-2 bg-[#fea598] rounded-full">
-              <img src="/tiktok-icon.svg" alt="TikTok" width="16" height="16" />
-            </div>
-            <div class="p-2 bg-[#fea598] rounded-full">
-              <img src="/youtube-icon.svg" alt="YouTube" width="16" height="16" />
-            </div>
-          </div>
-          <div class="text-center">Social Media</div>
+        <div class="animated-box lg:h-[450px]">
+          <img class="animated-slides test-class" src="/sliderIcon1.svg" alt="SliderIcon"  />
         </div>
     `
   }
 ];
 ---
 
+
 <div class="flex justify-center items-center mt-40">
   <Slide title={slides[0].title} textColor={slides[0].textColor} description={slides[0].description} buttonLabel={slides[0].buttonLabel}>
-    <Circle backgroundColor={slides[0].circleBackgroundColor} topPosition={slides[0].circleTopPosition}>
-        <Fragment set:html={slides[0].circleContent} />
+    <Circle backgroundColor={slides[0].circleBackgroundColor}>
+        <ImageAnimation />
     </Circle>
   </Slide>
 </div>
